[package]
name = "kittyscape-loot-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite", "migrate"] }
anyhow = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 