[package]
name = "kittyscape-loot-bot"
version = "0.1.0"
edition = "2021"

default-run = "kittyscape-loot-bot"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serenity = { version = "0.12", features = ["standard_framework", "cache", "model", "http", "gateway", "rustls_backend", "collector"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.18"
html-escape = "0.2"
regex = "1.10"
lazy_static = "1.4" 